--- a/src/Pages/WelcomePage.css
+++ b/src/Pages/WelcomePage.css
@@ -1,6 +1,6 @@
 .welcome-page {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -10,9 +10,9 @@
 
 .welcome-content {
   width: 100%;
-  max-width: min(90vw, 52%);
+  max-width: min(90%, 52%);
   height: 100%;
-  max-height: min(100vw ,38%);
+  max-height: min(100% ,38%);
 }
 
 .welcome-card {
